# cstrahan.github.com

./: .gitignore  CNAME  Gemfile  README.textile  Rakefile  TODO  _config.yml  about.html  about.markdown  atom.xml  blog.cabal  contact.markdown  env  index.html  projects.html  publish  shell.nix  site.hs
_layouts/: default.html  post.html
_posts/: 2009-06-03-odbc-via-ruby-windows.textile  2010-01-24-why-combinators.textile  2010-03-09-hacking-aspnet-dev-server.textile  2010-04-26-linq-in-ironruby.textile  2010-06-03-setting-ssh-key-password.textile  2010-09-29-adventures-in-dotnet-aop.textile  2011-01-24-why-combinators.textile  2011-04-20-just-installed-jekyll.textile  2011-04-25-atheism.textile  2011-04-30-vim-windows.textile  2011-05-08-altnetseattle.textile  2011-05-14-mongoid-yaml-rails-conflict.textile  2011-07-31-installing-ubuntu.textile  2011-09-12-austin-code-camp-2011.textile  2011-09-19-ubuntu-sound-problem.textile  2012-06-20-demystifying-coffeescripts-magic-sauce.textile  2012-07-20-demystifying-coffeescripts-magic-sauce.textile  2013-04-26-how-to-copy-and-paste-with-tmux-on-mac-osx.textile  2013-07-15-pure-ruby-cpuid-via-ffi.textile  2014-04-25-asdf.textile  2014-04-25-continuations.textile  2014-05-05-name.textile
css/: base.css  charlesstrahan.css  cstrahan.css  layout.css  screen.css  skeleton.css
posts/: 2009-06-03-odbc-via-ruby-windows.markdown  2010-04-26-linq-in-ironruby.markdown  2010-06-03-setting-ssh-key-password.markdown  2013-07-02-how-to-copy-and-paste-with-tmux-on-mac-osx.markdown  2013-07-15-pure-ruby-cpuid-via-ffi.markdown  (+5 more)
(+21 files in other folders)
