name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   src
  main-is:          site.hs
  build-depends:    base
                  , hakyll
                  , containers
                  , process
                  , blaze-html
                  , pandoc
  ghc-options:      -threaded -O0
  default-language: Haskell2010
